# rusdirect

./: Cargo.toml  Dockerfile  share.sh
.github/workflows/: docker.yml
src/: cleaner.rs  error.rs  handler.rs  lib.rs  main.rs  misc.rs  options.rs  redirection.rs
src/query/: clear_excess.sql  clear_expired.sql  get_redirection.sql  insert_redirection.sql  migration.sql
