[package]
name = "rusdirect"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "sync", "rt-multi-thread"] }
axum = { version = "0.5.1", default-features = false, features = ["http1"] }
sqlx = { version = "0.5.11", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "time"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
log = "0.4.16"
env_logger = "0.9.0"
clap = { version = "3.1.8", features = ["derive"] }
humantime = "2.1.0"